# candle-ext

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
data/: scaled_dot_product_attention-qkvmo.gen.py  scaled_dot_product_attention-qkvmo.safetensors
src/: chunk.rs  cumsum.rs  equal.rs  eye.rs  full.rs  kernels.rs  lib.rs  logical_not.rs  logical_or.rs  masked_fill.rs  outer.rs  scaled_dot_product_attention.rs  scatter.rs  to_tuple.rs  triangular.rs  unbind.rs  values_like.rs
src/kernels/: README.md  compatibility.cuh  custom_binary.cu  indexing.cu  strides.cuh
tests/: chunk.rs  cumsum.rs  equal.rs  eye.rs  full.rs  logical_not.rs  logical_or.rs  masked_fill.rs  outer.rs  scaled_dot_product_attention.rs  scatter.rs  triu_tril.rs  unbind.rs  values_like.rs
