[package]
name = "candle-ext"
version = "0.1.6"
edition = "2021"
description = "An extension library to Candle that provides PyTorch functions not currently available in Candle"

license = "MIT OR Apache-2.0"
repository = "https://github.com/mokeyish/candle-ext"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3"
candle-nn = "0.3"
